[package]
name = "rustkrazy_packer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cargo = "0.67.0"
clap = { version = "4.0.29", features = ["derive"] }
fatfs = "0.3.5"
fscommon = "0.1.1"
nix = { version = "0.26.1", features = ["ioctl"] }
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
squashfs-ng = { version = "0.1.2", git = "https://github.com/rustkrazy/squashfs-ng-rs.git" }
tempfile = "3.3.0"
